# HausdorffDistanceBetweenMeshs

./: .gitignore  CMakeLists.txt  DistanceBetweenMeshs.cpp  Mesh.cpp  Mesh.h  README.md  TestExecutionTime.cpp  TestExecutionTime.h  main.cpp
src/: DistanceBetweenMeshs.h  DistancePointTriangleExact.cpp  DistancePointTriangleExact.h  Mesh.cpp  main.cpp  vec3.h
